--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.1",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/netlify": "^5.3.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.11.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
 }
