--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/netlify": "^5.3.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.1",
+    "firebase": "^10.12.2",
+    "sweetalert2": "^11.12.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
